crates/lang-eval/tests/snapshots/workbench__circle_init.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model
---
sketch
[in]  radius: Length = 4mm
└── 0x1801bf438d8b094
    [in]  radius: Length = 4mm
