crates/lang-eval/tests/snapshots/workbench__circle_parameter_multi.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model
---
Multiplicity
├── sketch
│   |   - radius [in]: Length = 1mm
│   └── 0x1801bf438d8b094
│           - radius [in]: Length = 1mm
├── sketch
│   |   - radius [in]: Length = 2mm
│   └── 0x1801bf438d8b094
│           - radius [in]: Length = 2mm
└── sketch
    |   - radius [in]: Length = 3mm
    └── 0x1801bf438d8b094
            - radius [in]: Length = 3mm
