crates/lang-eval/tests/snapshots/workbench__circle_parameter_single.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model
---
sketch
|   - radius [in]: Length = 4mm
└── 0x1801bf438d8b094
        - radius [in]: Length = 4mm
