crates/lang-eval/tests/snapshots/workbench__circle_without_parameter.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model
---
sketch
└── 0x1801bf438d8b094
        - radius [in]: Length = 4mm
