crates/lang-eval/tests/snapshots/workbench__group.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model.to_string_with_ctx(&context)
---
Group
└── Builtin(__mu::geo2d::Circle[0x1801bf438d8b094])
        - radius [in]: Length = 4mm
