crates/lang-eval/tests/snapshots/workbench__group_with_property.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model
---
Group
|   - a [out]: Length = 4mm
└── Builtin(!0x1801bf438d8b094)
        - radius [in]: Length = 4mm
