crates/lang-eval/tests/snapshots/workbench__polar_expr_test.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model.to_string_with_ctx(&context)
---
Group
|   - a: [Angle] = [1.5707963267rad, 3.1415926535rad, 4.7123889802rad, 6.2831853072rad]
|   - n: Integer = 4
└── Value([1.5707963267rad, 3.1415926535rad, 4.7123889802rad, 6.2831853072rad])
