crates/lang-eval/tests/snapshots/workbench__rotate_angle_axis_multi.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model.to_string_with_ctx(&context)
---
Multiplicity
├── Workpiece(op)
│   |   - matrix [in]: Matrix3x3 = Matrix3 [[1, 0, 0], [0, 1, 0], [0, 0, 1]]
│   └── Builtin(RotateMatrix(Matrix3 [[1.0, 0.0, 0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]))
│       |   - matrix: Matrix3x3 = Matrix3 [[1, 0, 0], [0, 1, 0], [0, 0, 1]]
│       └── InputPlaceholder
├── Workpiece(op)
│   |   - matrix [in]: Matrix3x3 = Matrix3 [[0.7071067812, 0.7071067812, 0], [-0.7071067812, 0.7071067812, 0], [0, 0, 1]]
│   └── Builtin(RotateMatrix(Matrix3 [[0.7071067811921239, 0.7071067811921239, 0.0], [-0.7071067811921239, 0.7071067811921239, 0.0], [0.0, 0.0, 1.0]]))
│       |   - matrix: Matrix3x3 = Matrix3 [[0.7071067812, 0.7071067812, 0], [-0.7071067812, 0.7071067812, 0], [0, 0, 1]]
│       └── InputPlaceholder
└── Workpiece(op)
    |   - matrix [in]: Matrix3x3 = Matrix3 [[0, 1, 0], [-1, 0, 0], [0, 0, 1]]
    └── Builtin(RotateMatrix(Matrix3 [[0.0, 1.0, 0.0], [-1.0, 0.0, 0.0], [0.0, 0.0, 1.0]]))
        |   - matrix: Matrix3x3 = Matrix3 [[0, 1, 0], [-1, 0, 0], [0, 0, 1]]
        └── InputPlaceholder
