crates/lang-eval/tests/snapshots/workbench__translate_circle.snap
---
source: crates/lang-eval/tests/workbench.rs
expression: model.to_string_with_ctx(&context)
---
Builtin(Translate(1mm, 2mm, 0mm))
|   - x: Length = 1mm
|   - y: Length = 2mm
|   - z: Length = 0mm
└── Builtin(__mu::geo2d::Circle[0x1801bf438d8b094])
        - radius [in]: Length = 4mm
